RESOLVED FIXED214666
[Cocoa|WebM] Decode error when seeking
https://bugs.webkit.org/show_bug.cgi?id=214666
Summary [Cocoa|WebM] Decode error when seeking
Jer Noble
Reported 2020-07-22 17:18:10 PDT
[Cocoa|WebM] Decode error when seeking
Attachments
Patch (2.75 KB, patch)
2020-07-22 17:22 PDT, Jer Noble
eric.carlson: review+
Patch for landing (2.75 KB, patch)
2020-07-22 18:07 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-07-22 17:22:13 PDT
Jer Noble
Comment 2 2020-07-22 17:22:32 PDT
Eric Carlson
Comment 3 2020-07-22 18:03:36 PDT
Comment on attachment 404999 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=404999&action=review > Source/WebCore/ChangeLog:8 > + A decoder error is hit when seeking because we think all samples coming out of the SourceBufferParserWebM is a sync-sample. There is a tense problem here: "all samples ... is a sync-sample"
Jer Noble
Comment 4 2020-07-22 18:07:05 PDT
Created attachment 405003 [details] Patch for landing
EWS
Comment 5 2020-07-22 20:01:29 PDT
Committed r264742: <https://trac.webkit.org/changeset/264742> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405003 [details].
Note You need to log in before you can comment on or make changes to this bug.